k8s/iac/kustomize/base/istio-peerauth-strict.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: cloud-k8s-system-strict-mtls
  namespace: cloud-k8s-system
  labels:
    app.kubernetes.io/part-of: oya-cloud-k8s
    oyatie/microservice: cloud-k8s
spec:
  mtls:
    mode: STRICT
